--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.8",
-    "@types/uuid": "^8.3.4",
     "console-stamp": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "helmet": "^5.0.1",
-    "nodemon": "^3.0.0",
     "screenshot-desktop": "^1.12.7",
-    "typescript": "^4.5.4",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.1",
+    "@types/uuid": "^10.0.0",
+    "nodemon": "^3.1.9",
+    "typescript": "^5.7.3"
   }
 }
